# opencv_android

./: README.md
EdgeDetectionViewer/app/: build.gradle
EdgeDetectionViewer/app/src/AndroidManifest.xml/: AndroidManifest.xml
EdgeDetectionViewer/app/src/cpp/: CMakeLists.txt  native-lib.cpp
EdgeDetectionViewer/app/src/java/: CameraManager.java  MainActivity.java  NativeProcessor.java  OpenGLRenderer.java
EdgeDetectionViewer/app/src/res/: activity_main.xml
EdgeDetectionViewer/app/src/res/raw/: fragment_shader.glsl  vertex_shader.glsl
